Fix layout bug on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -301,14 +301,14 @@ body p {
   background-color: #e2e8f0;
   grid-area: content;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 4fr 1fr;
   padding: 60px 24px 24px;
   gap: 24px;
 }
 
 .projects-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-auto-rows: 200px;
   gap: 24px;
 }
@@ -333,10 +333,13 @@ body p {
   flex-direction: column;
   justify-content: center;
   padding: 24px;
+  margin-bottom: 60px;
+
   gap: 16px;
   background-color: white;
   border-radius: 12px;
   box-shadow: 2px 4px 8px hsl(0deg 0% 0% / 0.25);
+  height: fit-content;
 }
 
 .announcement-item {
@@ -365,7 +368,8 @@ body p {
   background-color: white;
   border-radius: 12px;
   box-shadow: 2px 4px 8px hsl(0deg 0% 0% / 0.25);
-  padding: 24px;
+  padding: 16px;
+  height: fit-content;
 }
 .trending-header {
   position: absolute;
@@ -381,6 +385,7 @@ body p {
   gap: 16px;
   min-width: 200px;
   font-size: 0.8rem;
+  padding: 12px 0px;
 }
 
 .card {
@@ -412,13 +417,14 @@ body p {
 }
 
 .extras-wrapper {
-  display: grid;
+  /* display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 5fr 1fr 5fr;
+  grid-template-rows: 1fr 1fr;
   grid-template-areas:
     "announcements"
-    "."
-    "trending";
+    "trending"; */
+  display: flex;
+  flex-direction: column;
 }
 
 /* Very tedious way of implementing grid-template area for nav li's */
